package com.padroes.chainofresponsibility;

public enum Prioridade {
    BAIXA, MEDIA, ALTA
}
