package com.padroes.chainofresponsibility;

public record TicketSuporte(int id, String descricao, Prioridade prioridade) {}
